argocd/20-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: local-ca
spec:
  tls:
  - hosts:
    - argocd.home.arpa
    secretName: argocd-tls
  rules:
  - host: argocd.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
